--- a/roles/dock/meta/main.yml
+++ b/roles/dock/meta/main.yml
@@ -9,7 +9,7 @@ galaxy_info:
   license: "license (Apache-2.0)"
   min_ansible_version: 2.10
   platforms:
-    - name: GenericUNIX
+    - name: macOS
       versions:
         - all
         - any
