--- a/roles/homebrew/meta/main.yml
+++ b/roles/homebrew/meta/main.yml
@@ -11,7 +11,7 @@ galaxy_info:
   license: "Apache-2.0"
   min_ansible_version: 2.10
   platforms:
-    - name: MacOSX
+    - name: macOS
       versions:
         - all
         - any
