--- a/roles/mas/meta/main.yml
+++ b/roles/mas/meta/main.yml
@@ -1,13 +1,11 @@
 ---
-dependencies: []
-
 galaxy_info:
   role_name: mas
   author: buluma
   description: Mac App Store CLI installation for macOS
   company: ShadowNet
-  license: "license (Apache-2.0)"
-  min_ansible_version: 2.10
+  license: Apache-2.0
+  min_ansible_version: "2.10"
   platforms:
     - name: macOS
       versions:
@@ -22,3 +20,4 @@ galaxy_info:
     - app
     - store
     - macos
+dependencies: []
