--- a/roles/dock/tasks/dock-remove.yml
+++ b/roles/dock/tasks/dock-remove.yml
@@ -1,5 +1,5 @@
 ---
-- name: "see if {{ item }} is in the Dock."
+- name: "See if {{ item }} is in the Dock."
   ansible.builtin.command:
     cmd: dockutil --find '{{ item }}'
   register: dockitem_exists
@@ -9,13 +9,13 @@
     or "command not found" in dockitem_exists.stdout
   tags: ['dock']
 
-- name: ensure Dock item {{ item }} is removed.
+- name: Ensure Dock item {{ item }} is removed.
   ansible.builtin.command:
     cmd: dockutil --remove '{{ item }}'
   when: dockitem_exists.rc  == 0
   tags: ['dock']
 
-- name: pause for 7 seconds between dock changes.
+- name: Pause for 7 seconds between dock changes.
   ansible.builtin.pause:
     seconds: 7
   when: dockitem_exists.rc == 0
