--- a/roles/dock/tasks/main.yml
+++ b/roles/dock/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+# See: https://github.com/kcrawford/dockutil/issues/127
 - name: Install dockutil.
   community.general.homebrew_cask:
     name: "{{ dockutil_homebrew_cask }}"
