--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -96,7 +96,7 @@
   become: true
   loop: "{{ homebrew_folders_base + homebrew_folders_additional }}"
 
-- name: perform brew installation.
+- name: Perform brew installation.
   block:
     - name: Force update brew after installation.
       command: "{{ homebrew_brew_bin_path }}/brew update --force"
